Make another thumbnail and seperate each them with the help of div

--- a/youtube.css
+++ b/youtube.css
@@ -6,9 +6,16 @@
     object-position: right; */
 }
 .search-bar {
-    font-size: 20px;
-    margin-left: 20px;
+    /* font-size: 20px;
+    margin-left: 20px; */
+    display: block;
 }
 .video-title {
     width: 300px;
+}
+.video-preview {
+    width: 300px;
+    display: inline-block;
+    vertical-align: top;
+    margin-right: 15px;
 }
