--- a/youtube.css
+++ b/youtube.css
@@ -4,11 +4,7 @@ p {
     margin-bottom: 0;
 }
 .thumbnail {
-    width: 300px;
-    display: block;
-    /* height: 300px;
-    object-fit: contain;
-    object-position: right; */
+    width: 100%;
 }
 .search-bar {
     /* font-size: 20px;
@@ -22,20 +18,15 @@ p {
     line-height: 20px;
     margin-bottom: 12px;
 }
-.video-preview {
-    width: 300px;
-    display: inline-block;
-    vertical-align: top;
-    margin-right: 15px;
-}
 .channel-picture {
-    display: inline-block;
-    width: 50px;
-    vertical-align: top;
+    /* background-color: gray; */
+}
+.video-info-grid {
+    display: grid;
+    grid-template-columns: 50px 1fr;
 }
 .video-info {
-    display: inline-block;
-    width: 200px;
+    /* background-color: gray; */
 }
 .profile-picture {
     width: 40px;
@@ -51,4 +42,10 @@ p {
 }
 .video-author {
     margin-bottom: 4px;
+}
+.video-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 16px;
+    row-gap: 40px;
 }
