--- a/styles/header.css
+++ b/styles/header.css
@@ -11,6 +11,7 @@
     border-bottom-width: 1px;
     border-bottom-style: solid;
     border-bottom-color: rgb(222, 222, 222);
+    z-index: 100;
 }
 .left-section {
 
@@ -91,6 +92,20 @@
 }
 .notifications-icon {
     height: 24px;
+}
+.notifications-icon-container {
+    position: relative;
+}
+.notifications-count {
+    position: absolute;
+    background-color: rgb(204, 0, 0);
+    color: white;
+    top: -2px;
+    right: -5px;
+    font-family: Roboto, Arial;
+    font-size: 11px;
+    padding: 2px 5px;
+    border-radius: 20px;
 }
 .current-user-picture {
     height: 32px;
