--- a/styles/header.css
+++ b/styles/header.css
@@ -61,9 +61,44 @@
     margin-left: -1px;
     margin-right: 10px;
 }
+.search-button,
+.voice-search-button,
+.upload-icon-container,
+.youtube-apps-icon-container,
+.notifications-icon-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    cursor: pointer;
+}
+.search-button .tooltip,
+.voice-search-button .tooltip,
+.upload-icon-container .tooltip,
+.youtube-apps-icon-container .tooltip,
+.notifications-icon-container .tooltip {
+    font-family: Roboto, Arial;
+    position: absolute;
+    background-color: grey;
+    color: white;
+    padding: 4px 8px;
+    border-radius: 2px;
+    font-size: 12px;
+    bottom: -30px;
+    opacity: 0;
+    transition: opacity 0.15s;
+    pointer-events: none;
+    white-space: nowrap;
+}
+.search-button:hover .tooltip,
+.voice-search-button:hover .tooltip,
+.upload-icon-container:hover .tooltip,
+.youtube-apps-icon-container:hover .tooltip,
+.notifications-icon-container:hover .tooltip {
+    opacity: 1;
+}
 .search-icon {
     height: 25px;
-    margin-top: 4px;
 }
 .voice-search-button {
     height: 40px;
@@ -74,7 +109,6 @@
 }
 .voice-search-icon {
     height: 24px;
-    margin-top: 4px;
 }
 .right-section {
     display: flex;
@@ -112,4 +146,5 @@
     width: 32px;
     object-fit:cover;
     border-radius: 16px;
+    cursor: pointer;
 }
