--- a/styles/video.css
+++ b/styles/video.css
@@ -1,8 +1,48 @@
+.profile-picture-container {
+    position: relative;
+    display: inline-block;
+}
+.channel-tooltip {
+    display: flex;
+    flex-direction: row;
+    background-color: white;
+    width: 200px;
+    position: absolute;
+    padding: 12px 12px;
+    box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.3);
+    border-radius: 6px;
+    top: 55px;
+    z-index: 300;
+    pointer-events: none;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.15s;
+}
+.profile-picture-container:hover .channel-tooltip {
+    opacity: 1;
+}
+.channel-tooltip-picture {
+    height: 50px;
+    width: 50px;
+    object-fit: cover;
+    border-radius: 25px;
+    margin-right: 8px;
+}
+.channel-tooltip-stats {
+    font-family: Roboto, Arial;
+    color: rgb(96, 96, 96);
+    font-size: 14px;
+}
+.channel-tooltip-name {
+    font-family: Roboto, Arial;
+    font-weight: bold;
+    font-size: 16px;
+    margin-bottom: 4px;
+}
 .thumbnail {
     width: 100%;
     border-radius: 15px;
 }
-
 .video-title {
     margin-top: 0;
     font-size: 14px;
