Make the website more responsive

--- a/styles/video.css
+++ b/styles/video.css
@@ -76,6 +76,21 @@
     column-gap: 16px;
     row-gap: 40px;
 }
+@media (max-width: 750px) {
+    .video-grid {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+@media (min-width: 751px) and (max-width: 999px) {
+    .video-grid {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+@media (min-width: 1000px) {
+    .video-grid {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+}
 .video-time {
     position: absolute;
     font-family: Roboto, Arial;
