--- a/styles/header.css
+++ b/styles/header.css
@@ -40,9 +40,10 @@
     height: 36px;
     font-size: 16px;
     padding-left: 10px;
-    border-width: 1px;
+    /* border-width: 1px;
     border-style: solid;
-    border-color: rgb(192, 192, 192);
+    border-color: rgb(192, 192, 192); */
+    border: 1px solid rgb(192, 192, 192);
     border-radius: 2px;
     box-shadow: inset 1px 2px 3px rgba(0, 0, 0, 0.05 );
     width: 0;
