--- a/styles/video.css
+++ b/styles/video.css
@@ -107,3 +107,15 @@
     text-decoration: none;
     color: black;
   }
+  @media (min-width: 1000px) {
+    .video-title {
+        font-size: 16px;
+        line-height: 24px;
+    }
+  }
+  @media (min-width: 1000px) {
+    .video-author,
+    .video-stats {
+        font-size: 14px;
+    }
+  }
